--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ hr {
 
 .navigation .nav-pills {
     text-align: right;
-    margin: 2px 10px 12px 3px ;
+    /* margin: 2px 10px 12px 3px ; */
 }
 
 .navigation .link {
